--- a/index.html
+++ b/index.html
@@ -1,284 +1,16 @@
-<!DOCTYPE html>
-
-
-<html lang="en">
+<!doctype html>
+<html>
 <head>
+	<link rel="stylesheet" href="stylesheet.css">
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<title>Business 2</title>
-
-<link href="css/bootstrap.min.css" rel="stylesheet">
-
-<link href="css/custom.css" rel="stylesheet">
-
-
-<!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<title>Untitled Document</title>
 </head>
+
 <body>
-
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-<div class="container">
-
-<div class="navbar-header">
-<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
-<span class="sr-only">Toggle navigation</span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-</button>
-<a class="navbar-brand" href="#">
-<span class="glyphicon glyphicon-fire"></span>
-LOGO
-</a>
-</div>
-
-<div class="collapse navbar-collapse" id="navbar">
-<ul class="nav navbar-nav navbar-right">
-<li class="active">
-<a href="#">Home</a>
-</li>
-<li>
-<a href="#">Products</a>
-</li>
-<li class="dropdown">
-<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
-<ul class="dropdown-menu" aria-labelledby="about-us">
-<li><a href="#">Engage</a></li>
-<li><a href="#">Pontificate</a></li>
-<li><a href="#">Synergize</a></li>
-</ul>
-</li>
-<li>
-<a href="#">My Account</a>
-</li>
-<li>
-<a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> My Cart</a>
-</li>
-</ul>
-</div>
-</div>
-</nav>
-
-<div class="jumbotron feature">
-<div class="container">
-<h1><span class="glyphicon glyphicon-equalizer"></span> Dramatically Engage</h1>
-<p>Objectively innovate empowered manufactured products whereas parallel platforms.</p>
-<p><a class="btn btn-primary" href="#">Engage Now</a></p>
-</div>
-</div>
-
-<div class="container">
-<div class="row">
-<div class="col-xs-12">
-<h1 class="text-center">Superior Quality</h1>
-<p class="lead text-center">Proactively envisioned multimedia based expertise and cross-media growth strategies. Seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing. Holistically pontificate installed base portals after maintainable products without collateral.</p>
-</div>
-</div>
-</div>
-
-<div class="container-fluid">
-<div class="row promo">
-<a href="#">
-<div class="col-md-4 promo-item item-1">
-<h3>
-Unleash
-</h3>
-</div>
-</a>
-<a href="#">
-<div class="col-md-4 promo-item item-2">
-<h3>
-Synergize
-</h3>
-</div>
-</a>
-<a href="#">
-<div class="col-md-4 promo-item item-3">
-<h3>
-Procrastinate
-</h3>
-</div>
-</a>
-</div>
-</div>
-
-<div class="container">
-<h1 class="text-center">World Class Products</h1>
-<div class="row">
-
-<div class="col-sm-6 col-md-3">
-<div class="thumbnail featured-product">
-<a href="#">
-<img src="images/pepper.jpg" alt>
-</a>
-<div class="caption">
-<h3>Premium Niche</h3>
-<p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip.</p>
-<p class="price">$10.45</p>
-
-<div class="input-group">
-<input type="number" class="form-control" value="1">
-<span class="input-group-btn">
-<button class="btn btn-primary" type="button">
-<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-Add to Cart
-</button>
-</span>
-</div>
-</div>
-</div>
-</div>
-
-<div class="col-sm-6 col-md-3">
-<div class="thumbnail featured-product">
-<a href="#">
-<img src="images/jars.jpg" alt>
-</a>
-<div class="caption">
-<h3>Handy Holistic</h3>
-<p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip.</p>
-<p class="price"><s>$24.99</s> $18.99</p>
-
-<div class="input-group">
-<input type="number" class="form-control" value="1">
-<span class="input-group-btn">
-<button class="btn btn-primary" type="button">
-<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-Add to Cart
-</button>
-</span>
-</div>
-</div>
-</div>
-</div>
-
-<div class="col-sm-6 col-md-3">
-<div class="thumbnail featured-product">
-<a href="#">
-<img src="images/pot.jpg" alt>
-</a>
-<div class="caption">
-<h3>Seamless Strategic</h3>
-<p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip.</p>
-<p class="price">$11.50</p>
-
-<div class="input-group">
-<input type="number" class="form-control" value="1">
-<span class="input-group-btn">
-<button class="btn btn-primary" type="button">
-<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-Add to Cart
-</button>
-</span>
-</div>
-</div>
-</div>
-</div>
-
-<div class="col-sm-6 col-md-3">
-<div class="thumbnail featured-product">
-<a href="#">
-<img src="images/teapot.jpg" alt>
-</a>
-<div class="caption">
-<h3>Maintained Strip</h3>
-<p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip.</p>
-<p class="price">$45.50</p>
-
-<div class="input-group">
-<input type="number" class="form-control" value="1">
-<span class="input-group-btn">
-<button class="btn btn-primary" type="button">
-<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-Add to Cart
-</button>
-</span>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="container text-center">
-<h1>Unparalleled Service</h1>
-<p class="lead">Proactively envisioned multimedia based expertise and cross-media growth strategies. Seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing. Holistically pontificate installed base portals after maintainable products without collateral.</p>
-<img class="img-responsive img-circle center-block" src="images/service.jpg" alt>
-</div>
-
-<footer>
-<h1 class="text-center">Find Us</h1>
-
-<div class="footer-map"></div>
-<div class="container">
-<div class="row">
-<div class="col-sm-12 footer-info-item text-center">
-<p class="lead">
-31 Spooner Street, Quahog, Rhode Island
-</p>
-<h2>Contact Us</h2>
-<p class="lead"><span class="glyphicon glyphicon-phone-alt"></span> +1(23) 456 7890<br>
-<a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="2d44434b426d48554c405d4148034e4240">[email&#160;protected]</a></p>
-</div>
-</div>
-</div>
-
-<div class="footer-info">
-<div class="container">
-<div class="row">
-<div class="col-sm-4 footer-info-item">
-<h3>Information</h3>
-<ul class="list-unstyled">
-<li><a href="#">About Us</a></li>
-<li><a href="#">Customer Service</a></li>
-<li><a href="#">Privacy Policy</a></li>
-<li><a href="#">Sitemap</a></li>
-<li><a href="#">Orders &amp; Returns</a></li>
-</ul>
-</div>
-<div class="col-sm-4 footer-info-item">
-<h3>My Account</h3>
-<ul class="list-unstyled">
-<li><a href="#">Sign In</a></li>
-<li><a href="#">View Cart</a></li>
-<li><a href="#">My Wishlist</a></li>
-<li><a href="#">Track My Order</a></li>
-<li><a href="#">Help</a></li>
-</ul>
-</div>
-<div class="col-sm-4 footer-info-item">
-<h3><span class="glyphicon glyphicon-list-alt"></span> Newsletter</h3>
-<p>Sign up for exclusive offers.</p>
-<div class="input-group">
-<input type="email" class="form-control" placeholder="Enter your email address">
-<span class="input-group-btn">
-<button class="btn btn-primary" type="button">
-Subscribe!
-</button>
-</span>
-</div>
-</div>
-</div>
-</div>
-</div>
-
-<div class="small-print">
-<div class="container">
-<p><a href="#">Terms &amp; Conditions</a> | <a href="#">Privacy Policy</a> | <a href="#">Contact</a></p>
-<p>Copyright &copy; Example.com 2015 </p>
-</div>
-</div>
-</footer>
-
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="js/jquery-1.11.3.min.js"></script>
-
-<script src="js/bootstrap.min.js"></script>
-
-<script src="js/ie10-viewport-bug-workaround.js"></script>
-<script defer src="https://static.cloudflareinsights.com/beacon.min.js/v8b253dfea2ab4077af8c6f58422dfbfd1689876627854" integrity="sha512-bjgnUKX4azu3dLTVtie9u6TKqgx29RBwfj3QXYt5EKfWM/9hPSAI/4qcV5NACjwAo8UtTeWefx6Zq5PHcMm7Tg==" data-cf-beacon='{"rayId":"7fbf6dae697f61c2","version":"2023.8.0","r":1,"token":"f95a87206c5140fb90f2612ffd79569d","si":100}' crossorigin="anonymous"></script>
+	
+<h1>Lucas Simonen</h1>
+	<div>
+<p1>Hello! My name is Lucas Simonen and I am computer science undergraduate at the University of Wisconsin Madison. I am currently looking for a cs related internship and/or research position.</p1>
+	</div>
 </body>
 </html>
