--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="css/stylesheet.css">
 <meta charset="utf-8">
 <title>Untitled Document</title>
 </head>
