made it line up better

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" href="css/stylesheet.css">
+	<style>
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+</style>
+	<link rel="stylesheet" href="stylesheet.css">
 <meta charset="utf-8">
 <title>Untitled Document</title>
 </head>
 
 <body>
 	
-<h1>Lucas Simonen</h1>
+	<h1>Lucas Simonen</h1>
 	<div>
-<p1>Hello! My name is Lucas Simonen and I am computer science undergraduate at the University of Wisconsin Madison. I am currently looking for a cs related internship and/or research position.</p1>
+<p1>A computer science undergraduate at the University of Wisconsin Madison.</p1>
 	</div>
 </body>
 </html>
