--- a/my-new-app/public/index.html
+++ b/my-new-app/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Lucas SImonen personal portfolio"
-      content="Portfolio created with reactjs"
+      name="Lucas Simonen personal portfolio"
+      content="Portfolio created with JSReact"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/lucas_logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
